--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,9 +28,18 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <button id="clearFieldsBtn" type="button" class="btn btn-secondary" aria-label="clear fields button">
+        Clear Fields
+      </button>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div id="hour-09" class="row time-div">
+        <div class="col-md-1 hour"><span id="9">9am</span></div>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 9am">
+          <i class="fas fa-lock"></i>
+        </button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
