Updated index.html and script.js

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,17 +32,93 @@
         Clear Fields
       </button>
     </header>
+    
     <div class="container">
       <div id="hour-09" class="row time-div">
-        <div class="col-md-1 hour"><span id="9">9am</span></div>
+        <div class="col-md-1 hour" id="9"><span>9am</span>
         <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
         <button class="col-md-1 saveBtn" aria-label="save button 9am">
           <i class="fas fa-lock"></i>
         </button>
+        </div>
       </div>
+
+      <div id="hour-10" class="row time-div">
+        <div class="col-md-1 hour" id="10"><span>10am</span>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 10am">
+          <i class="fas fa-lock"></i>
+        </button>
+        </div>
+      </div>
+
+      <div id="hour-11" class="row time-div">
+        <div class="col-md-1 hour" id="11"><span>11am</span>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 11am">
+          <i class="fas fa-lock"></i>
+        </button>
+        </div>
+      </div>
+
+      <div id="hour-12" class="row time-div">
+        <div class="col-md-1 hour" id="12"><span>12pm</span>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 12pm">
+          <i class="fas fa-lock"></i>
+        </button>
+        </div>
+      </div>
+
+      <div id="hour-13" class="row time-div">
+        <div class="col-md-1 hour" id="13"><span>1pm</span>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 1pm">
+          <i class="fas fa-lock"></i>
+        </button>
+        </div>
+      </div>
+
+      <div id="hour-14" class="row time-div">
+        <div class="col-md-1 hour" id="14"><span>2pm</span>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 2pm">
+          <i class="fas fa-lock"></i>
+        </button>
+        </div>
+      </div>
+
+      <div id="hour-15" class="row time-div">
+        <div class="col-md-1 hour" id="15"><span>3pm</span>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 3pm">
+          <i class="fas fa-lock"></i>
+        </button>
+        </div>
+      </div>
+
+      <div id="hour-16" class="row time-div">
+        <div class="col-md-1 hour" id="16"><span>4pm</span>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 4pm">
+          <i class="fas fa-lock"></i>
+        </button>
+        </div>
+      </div>
+
+      <div id="hour-17" class="row time-div">
+        <div class="col-md-1 hour" id="17"><span>5pm</span>
+        <textarea class="col-md-10 time-block description" placeholder="Add schedule item here"></textarea>
+        <button class="col-md-1 saveBtn" aria-label="save button 5pm">
+          <i class="fas fa-lock"></i>
+        </button>
+        </div>
+      </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
