--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,7 +26,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     <div id="hour-10" class="time-block row">
         <div class="col-md-1 hour">
@@ -34,7 +34,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     <div id="hour-11" class="time-block row">
         <div class="col-md-1 hour">
@@ -42,7 +42,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     <div id="hour-12" class="time-block row">
         <div class="col-md-1 hour">
@@ -50,7 +50,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     <div id="hour-13" class="time-block row">
         <div class="col-md-1 hour">
@@ -58,7 +58,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     <div id="hour-14" class="time-block row">
         <div class="col-md-1 hour">
@@ -66,7 +66,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     <div id="hour-15" class="time-block row">
         <div class="col-md-1 hour">
@@ -74,7 +74,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     <div id="hour-16" class="time-block row">
         <div class="col-md-1 hour">
@@ -82,7 +82,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     <div id="hour-17" class="time-block row">
         <div class="col-md-1 hour">
@@ -90,7 +90,7 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">&#128274;</button>
     </div>
     </div>
     
